[package]
name = "tuibridge"
version = "0.1.0"
edition = "2021"
authors = ["TuiBridge Team"]
description = "Run Ink (React for terminals) using rquickjs + Rust"

[dependencies]
# JavaScript runtime
rquickjs = { version = "0.7", default-features = false, features = ["loader", "full"] }

# Terminal UI
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Yoga layout (Flexbox for terminals)
yoga = "0.5"

# Ordered float (for Yoga style values)
ordered-float = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TTY detection
atty = "0.2"

# File watching (hot reload)
notify = "8"
notify-debouncer-mini = "0.5"

# Text measurement
unicode-width = "0.2"
textwrap = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"
tracing-error = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures = "0.3"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bin]]
name = "tuibridge"
path = "src/main.rs"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
# strip = true  # Only for final binary, not during development
panic = "abort"
