[package]
name = "tuibridge"
version = "0.1.0"
edition = "2021"
authors = ["TuiBridge Team"]
description = "Run Ink (React for terminals) using rquickjs + Rust"

[features]
default = []
hotreload = ["notify"]
bench = []
# Enable swc-based TSX compiler
compiler = ["swc", "swc_common", "swc_ecma_parser", "swc_ecma_codegen", "swc_ecma_visit", "swc_ecma_ast", "swc_ecma_transforms"]
swc = []

[dependencies]
# JavaScript runtime
rquickjs = { version = "0.7", default-features = false, features = ["loader", "full"] }

# Terminal UI
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Yoga layout (Flexbox for terminals)
yoga = "0.5"

# Ordered float (for Yoga style values)
ordered-float = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TTY detection
atty = "0.2"

# File watching (hot reload)
notify = { version = "8", optional = true }
notify-debouncer-mini = { version = "0.5", optional = true }

# Text measurement
unicode-width = "0.2"
textwrap = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"
tracing-error = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures = "0.3"

# Signal handling for Ctrl+C cleanup
ctrlc = "3"

# TSX/TS Compiler (optional swc-based)
swc_common = { version = "23", optional = true }
swc_ecma_parser = { version = "41", optional = true }
swc_ecma_codegen = { version = "28", optional = true }
swc_ecma_visit = { version = "25", optional = true }
swc_ecma_ast = { version = "25", optional = true }
swc_ecma_transforms = { version = "55", optional = true }
regex = "1"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
serial_test = "3"

[[bin]]
name = "tuibridge"
path = "src/main.rs"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
# strip = true  # Only for final binary, not during development
panic = "abort"
