[package]
name = "quench"
version = "0.1.0"
edition = "2021"
authors = ["Vitaly Baum <vitaly.baum@gmail.com>"]
description = "Run Ink (React for terminals) using custom JS runtime + Rust"
license = "MIT"

[features]
default = []
hotreload = ["notify", "notify-debouncer-mini"]

[workspace]
members = ["crates/quench-runtime"]

[dependencies]
# JavaScript runtime - our custom interpreter
quench-runtime = { path = "crates/quench-runtime" }

# Terminal UI
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Yoga layout (Flexbox for terminals)
yoga = "0.5"

# Ordered float (for Yoga style values)
ordered-float = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TTY detection
atty = "0.2"

# File watching (hot reload)
notify = { version = "8", optional = true }
notify-debouncer-mini = { version = "0.5", optional = true }

# Text measurement
unicode-width = "0.2"
textwrap = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"
tracing-error = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Text processing (for compiler hooks)
regex = "1"

# Async utilities
futures = "0.3"

# Signal handling for Ctrl+C cleanup
ctrlc = "3"

once_cell = "1"

[build-dependencies]
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
serial_test = "3"

[[bin]]
name = "quench"
path = "src/main.rs"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
# strip = true  # Only for final binary, not during development
panic = "abort"
