[package]
name = "quench-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Quench Team"]
description = "Custom JavaScript runtime for Quench - Ink terminal UI framework"
license = "MIT"

[dependencies]
# Parsing - SWC only (no custom lexers or parsers)
swc_common = "23"
swc_ecma_parser = "41"
swc_ecma_ast = "25"
swc_atoms = "9"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL encoding
urlencoding = "2"

# Tracing/logging
tracing = "0.1"

# Error handling
anyhow = "1"

# Conformance testing
walkdir = "2"
chrono = "0.4"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
