[package]
name = "runts-client"
version = "0.1.0"
edition = "2021"
description = "Runts client-side runtime for island hydration"
authors = ["runts team"]
license = "MIT OR Apache-2.0"

[lib]
name = "runts_client"
path = "src/lib.rs"

[build-dependencies]
rustfmt = { version = "0.4", optional = true }
