[package]
name = "runts-lib"
version = "0.1.0"
edition = "2021"
description = "Shared runtime library for runts"
authors = ["runts team"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP types
http = "1.0"
axum = "0.7"

# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
parking_lot = "0.12"
indexmap = { version = "2.5", features = ["serde"] }
lazy_static = "1.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Procedural macros
runts-macros = { path = "../runts-macros" }

[features]
default = []
server = ["tokio/rt-multi-thread"]
