[package]
name = "runts-lib"
version = "0.1.0"
edition = "2021"
description = "Shared runtime library for runts"
authors = ["runts team"]

[lib]
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP types
http = "1.0"
axum = "0.7"

# Utilities
parking_lot = "0.12"

# Procedural macros
runts-macros = { path = "../runts-macros" }

[features]
default = []
server = []
