[package]
name = "runts-plugin"
version = "0.1.0"
edition = "2021"
description = "Plugin system for runts"
authors = ["runts team"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
runts-hir = { path = "../runts-hir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
