[package]
name = "runts-ratatui"
version = "0.1.0"
edition = "2021"
description = "Ratatui integration for runts"
authors = ["runts team"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
runts-plugin = { path = "../runts-plugin" }
runts-lib = { path = "../runts-lib" }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
