[package]
name = "runts-ratatui"
version = "0.1.0"
edition = "2021"
description = "Ratatui integration for runts"
authors = ["runts team"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
runts-plugin = { path = "../runts-plugin" }
runts-lib = { path = "../runts-lib" }
runts-ink = { path = "../runts-ink" }
proc-macro2 = "1.0"
quote = "1.0"
rquickjs = { version = "0.12", features = ["bindgen", "parallel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
