[package]
name = "runts-react"
version = "0.1.0"
edition = "2021"
description = "React SSR plugin for runts"
authors = ["runts team"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
runts-plugin = { path = "../runts-plugin" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
