[package]
name = "ink-counter"
version = "0.1.0"
edition = "2021"
description = "Minimal Ink-style counter for runts-ink"
authors = ["runts team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "ink-counter"
path = "src/main.rs"

[dependencies]
runts-ink = { path = "../../crates/runts-ink" }
anyhow = "1.0"
crossterm = "0.27"
ratatui = { version = "0.26", features = ["crossterm"] }
