[package]
name = "my-blog"
version = "0.1.0"
edition = "2021"
description = "A Fresh/Preact blog built with runts"
authors = ["runts team"]

[dependencies]
# Core runtime (from runts)
runts-lib = { path = "../../crates/runts-lib" }

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "compress"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
bytes = "1.5"
mime = "0.3"
walkdir = "2.5"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
